Support cross-origin request.

--- a/demo/index_compile.html
+++ b/demo/index_compile.html
@@ -4,12 +4,11 @@
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script type="text/javascript">
 var RELATEDPOSTS_SETTINGS = {
-    BlogURL: 'garafu.blogspot.jp',
+    BlogUrl: 'garafu.blogspot.jp',
     MaxResults: 5,
-    ThumbnailVisible: false
+    ThumbnailVisible: true
 };
   </script>
-  <script type="text/javascript" src="//www.google.com/jsapi"></script>
   <script type="text/javascript" src="../build/blogger.relatedposts.min.js"></script>
 </head>
 <body>
