--- a/demo/index_nocompile.html
+++ b/demo/index_nocompile.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>No Compile</title>
+    <link href='//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
     <div id='blogger.relatedposts.label'>
@@ -14,7 +15,7 @@
 var RELATEDPOSTS_SETTINGS = {
     BlogUrl: 'garafu.blogspot.jp',
     MaxResults: 5,
-    ThumbnailVisible: true
+    LoadingMessage: '<i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>'
 };
         </script>
         <script type="text/javascript" src="../lib/closure-library/closure/goog/base.js"></script>
